k8s/apps/envoy-gateway-class/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    external-dns-cloudflare.alpha.kubernetes.io/target: 111.100.165.117
    external-dns-local.alpha.kubernetes.io/target: 192.168.12.138
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  addresses:
    - type: IPAddress
      value: 192.168.12.138
  gatewayClassName: envoy-gateway
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: envoy-gateway-cert
        mode: Terminate
    - allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: TLSRoute
        namespaces:
          from: All
      hostname: '*.tls.walnuts.dev'
      name: tls-passthrough
      port: 8443
      protocol: TLS
      tls:
        mode: Passthrough
    - allowedRoutes:
        namespaces:
          from: All
      name: smtp
      port: 25
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      name: smtps
      port: 465
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      name: submission
      port: 587
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      name: imaps
      port: 993
      protocol: TCP
